feat: add test for rewrites / redirects, fix serve.json files

--- a/docker-config/languages/dothraki/serve.json
+++ b/docker-config/languages/dothraki/serve.json
@@ -17,7 +17,7 @@
     },
     {
       "source": "/archive/:archiveSlug?",
-      "destination": "/dothraki/news/"
+      "destination": "/dothraki/news"
     },
     {
       "source": "/our-sponsors",
