--- a/i18n/locales/japanese/translations.json
+++ b/i18n/locales/japanese/translations.json
@@ -12,7 +12,7 @@
     "see-results": "すべての結果を表示: {{ searchQuery }}",
     "no-tutorials": "投稿が見つかりませんでした"
   },
-  "banner": "コーディングを学ぶ — <span>約 3,000 時間のカリキュラムが無料</span>",
+  "banner": "コーディングを学ぶ — {{ <0> }}約 3,000 時間のカリキュラムが無料{{ </0> }}",
   "author": {
     "no-posts": "投稿なし",
     "one-post": "1 件の投稿",
