--- a/i18n/locales/chinese/translations.json
+++ b/i18n/locales/chinese/translations.json
@@ -16,7 +16,7 @@
     "show-comments": "显示评论",
     "error": "抱歉，暂时无法加载评论，请稍后再试。"
   },
-  "banner": "学习编程 — <span>3,000 小时免费课程</span>",
+  "banner": "学习编程 — {{ <0> }}3,000 小时免费课程{{ </0> }}",
   "author": {
     "no-posts": "没有文章",
     "one-post": "1 篇文章",
