feat: write i18n tests for nav, banner, and footer, adjust schema and templates

--- a/i18n/locales/english/links.json
+++ b/i18n/locales/english/links.json
@@ -1,15 +1,13 @@
 {
+  "forum": "https://forum.freecodecamp.org/",
+  "donate": "https://www.freecodecamp.org/donate/",
+  "banner": "https://www.freecodecamp.org/",
+  "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
+  "twitter": "https://twitter.com/freecodecamp",
   "footer": {
     "about": "https://www.freecodecamp.org/news/about/",
     "support": "https://www.freecodecamp.org/news/support/",
     "honesty": "https://www.freecodecamp.org/news/academic-honesty-policy/",
     "coc": "https://www.freecodecamp.org/news/code-of-conduct/"
-  },
-  "nav": {
-    "forum": "https://forum.freecodecamp.org/",
-    "donate": "https://www.freecodecamp.org/donate/"
-  },
-  "banner": "https://www.freecodecamp.org/",
-  "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
-  "twitter": "https://twitter.com/freecodecamp"
+  }
 }
