--- a/i18n/locales/chinese/links.json
+++ b/i18n/locales/chinese/links.json
@@ -1,15 +1,13 @@
 {
+  "forum": "https://chinese.freecodecamp.org/forum/",
+  "donate": "https://chinese.freecodecamp.org/donate/",
+  "banner": "https://chinese.freecodecamp.org/",
+  "learn-to-code-cta": "https://chinese.freecodecamp.org/learn/",
+  "twitter": "https://twitter.com/freeCodeCampZH",
   "footer": {
     "about": "https://chinese.freecodecamp.org/news/about/",
     "support": "https://chinese.freecodecamp.org/news/support/",
     "honesty": "https://chinese.freecodecamp.org/news/academic-honesty/",
     "coc": "https://chinese.freecodecamp.org/news/code-of-conduct/"
-  },
-  "nav": {
-    "forum": "https://chinese.freecodecamp.org/forum/",
-    "donate": "https://chinese.freecodecamp.org/donate/"
-  },
-  "banner": "https://chinese.freecodecamp.org/",
-  "learn-to-code-cta": "https://chinese.freecodecamp.org/learn/",
-  "twitter": "https://twitter.com/freeCodeCampZH"
+  }
 }
