--- a/i18n/locales/italian/links.json
+++ b/i18n/locales/italian/links.json
@@ -1,15 +1,13 @@
 {
+  "forum": "https://forum.freecodecamp.org/c/italiano/535",
+  "donate": "https://www.freecodecamp.org/italian/donate/",
+  "banner": "https://chat.freecodecamp.org/",
+  "learn-to-code-cta": "https://www.freecodecamp.org/italian/learn/",
+  "twitter": "https://twitter.com/freecodecampit",
   "footer": {
     "about": "https://www.freecodecamp.org/italian/news/faq/",
     "support": "https://www.freecodecamp.org/italian/news/domande-frequenti-supporto-tecnico-freecodecamp-faq/",
     "honesty": "https://www.freecodecamp.org/italian/news/freecodecamps-academic-honesty-policy/",
     "coc": "https://www.freecodecamp.org/italian/news/codice-di-condotta/"
-  },
-  "nav": {
-    "forum": "https://forum.freecodecamp.org/c/italiano/535",
-    "donate": "https://www.freecodecamp.org/italian/donate/"
-  },
-  "banner": "https://chat.freecodecamp.org/",
-  "learn-to-code-cta": "https://www.freecodecamp.org/italian/learn/",
-  "twitter": "https://twitter.com/freecodecampit"
+  }
 }
