--- a/i18n/locales/italian/translations.json
+++ b/i18n/locales/italian/translations.json
@@ -53,7 +53,7 @@
     "tax-exempt-status": "freeCodeCamp è una organizazione no-profit 501(c)(3) esentasse supportata da donazioni (Numero di identificazione per le tasse federali negli Stati Uniti d'America: 82-0779546)",
     "mission-statement": "La nostra missione: aiutare le persone a imparare a programamre gratuitamente. Portiamo avanti la nostra missione creando centinaia di video, articoli, e lezioni di programmazione interattive, tutto disponibile gratuitamente al pubblico. Abbiamo anche migliaia di gruppi di studi di freeCodeCamp attorno al mondo.",
     "donation-initiatives": "Le donazioni a freeCodeCamp supportano le nostre iniziative di educazione e aiutano a pagare i server, i servizi e lo staff.",
-    "donate-link": "Puoi {{ <0> }}fare una donazione qui{{ </0> }}.",
+    "donate-text": "Puoi {{ <0> }}fare una donazione qui{{ </0> }}.",
     "trending-guides": "Articoli più cliccati",
     "our-nonprofit": "La nostra no-profit",
     "links": {
