--- a/i18n/locales/portuguese/links.json
+++ b/i18n/locales/portuguese/links.json
@@ -1,15 +1,13 @@
 {
+  "forum": "https://forum.freecodecamp.org/c/portugues/534",
+  "donate": "https://www.freecodecamp.org/portuguese/donate/",
+  "banner": "https://chat.freecodecamp.org/home",
+  "learn-to-code-cta": "https://www.freecodecamp.org/portuguese/learn/",
+  "twitter": "https://twitter.com/freecodecampPT",
   "footer": {
     "about": "https://www.freecodecamp.org/portuguese/news/sobre-o-freecodecamp-perguntas-frequentes/",
     "support": "https://www.freecodecamp.org/portuguese/news/perguntas-frequentes-sobre-suporte-tecnico-faq-do-freecodecamp/",
     "honesty": "https://www.freecodecamp.org/portuguese/news/politica-de-honestidade-academica-do-freecodecamp/",
     "coc": "https://www.freecodecamp.org/portuguese/news/codigo-de-conduta-do-freecodecamp/"
-  },
-  "nav": {
-    "forum": "https://forum.freecodecamp.org/c/portugues/534",
-    "donate": "https://www.freecodecamp.org/portuguese/donate/"
-  },
-  "banner": "https://chat.freecodecamp.org/home",
-  "learn-to-code-cta": "https://www.freecodecamp.org/portuguese/learn/",
-  "twitter": "https://twitter.com/freecodecampPT"
+  }
 }
