--- a/i18n/locales/english/translations.json
+++ b/i18n/locales/english/translations.json
@@ -2,8 +2,7 @@
   "buttons": {
     "forum": "Forum",
     "donate": "Donate",
-    "load-more-articles": "Load More Articles",
-    "learn-to-code-cta": "Get started"
+    "load-more-articles": "Load More Articles"
   },
   "search": {
     "label": "Search",
@@ -33,7 +32,7 @@
     "author-no-twitter": "If this article was helpful, {{ <0> }}tweet it{{ </0> }}.",
     "default-tweet": "Thank you {{ twitter }} for writing this helpful article."
   },
-  "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers.",
+  "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers. {{ <0> }}Get started{{ </0> }}",
   "localization-meta": {
     "roles": {
       "author": "author",
