--- a/i18n/locales/english/translations.json
+++ b/i18n/locales/english/translations.json
@@ -2,48 +2,37 @@
   "buttons": {
     "forum": "Forum",
     "donate": "Donate",
-    "load-more-articles": "Load More Articles",
-    "author-has-twitter": "Tweet a thanks",
-    "author-no-twitter": "tweet it",
-    "learn-to-code-cta": "Get started"
+    "load-more-articles": "Load More Articles"
   },
   "search": {
     "label": "Search",
     "accessible-name": "Submit your search query",
-    "placeholder": "Search 7,000+ tutorials",
+    "placeholder": "Search 8,000+ tutorials",
     "see-results": "See all results for {{ searchQuery }}",
     "no-tutorials": "No tutorials found"
   },
-  "banner": {
-    "text": "Learn to code — <span>free 3,000-hour curriculum</span>"
-  },
+  "banner": "Learn to code — {{ <0> }}free 3,000-hour curriculum{{ </0> }}",
   "author": {
-    "page": {
-      "no-posts": "No posts",
-      "one-post": "1 post",
-      "multiple-posts": "{{ postCount }} posts"
-    },
-    "byline": {
-      "read-more": "Read {{ <0> }}more posts{{ </0> }} by this {{ role }}."
-    }
+    "no-posts": "No posts",
+    "one-post": "1 post",
+    "multiple-posts": "{{ postCount }} posts",
+    "read-more": "Read {{ <0> }}more posts{{ </0> }} by this {{ role }}."
   },
-  "tag-page": {
-    "collection-of-posts": "A collection of posts",
+  "tag": {
+    "no-posts": "A collection of posts",
     "one-post": "A collection of 1 post",
     "multiple-posts": "A collection of {{ postCount }} posts"
   },
-  "404-page": {
+  "404": {
     "page-not-found": "Page not found",
     "go-to-front-page": "Go to the front page"
   },
   "social-row": {
-    "author-has-twitter": "If you read this far, tweet to the author to show them you care.",
-    "author-no-twitter": "If this article was helpful",
-    "default-tweet": "Thank you {{ twitter }} for writing this helpful article"
+    "author-has-twitter": "If you read this far, tweet to the author to show them you care. {{ <0> }}Tweet a thanks{{ </0> }}",
+    "author-no-twitter": "If this article was helpful, {{ <0> }}tweet it{{ </0> }}.",
+    "default-tweet": "Thank you {{ twitter }} for writing this helpful article."
   },
-  "learn-to-code-cta": {
-    "text": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers."
-  },
+  "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers. {{ <0> }}Get started{{ </0> }}",
   "localization-meta": {
     "roles": {
       "author": "author",
@@ -63,7 +52,7 @@
     "tax-exempt-status": "freeCodeCamp is a donor-supported tax-exempt 501(c)(3) nonprofit organization (United States Federal Tax Identification Number: 82-0779546)",
     "mission-statement": "Our mission: to help people learn to code for free. We accomplish this by creating thousands of videos, articles, and interactive coding lessons - all freely available to the public. We also have thousands of freeCodeCamp study groups around the world.",
     "donation-initiatives": "Donations to freeCodeCamp go toward our education initiatives, and help pay for servers, services, and staff.",
-    "donate-link": "You can {{ <0> }}make a tax-deductible donation here{{ </0> }}.",
+    "donate-text": "You can {{ <0> }}make a tax-deductible donation here{{ </0> }}.",
     "trending-guides": "Trending Guides",
     "our-nonprofit": "Our Nonprofit",
     "links": {
@@ -81,7 +70,7 @@
     }
   },
   "fallback": {
-    "message": "Your browser doesn’t support HTML5 {{ element }}.",
+    "message": "Your browser doesn't support HTML5 {{ element }}.",
     "audio": "audio",
     "video": "video"
   }
