--- a/i18n/locales/english/trending.json
+++ b/i18n/locales/english/trending.json
@@ -1,62 +1,62 @@
 {
-  "article0title": "10 to the Power of 0",
-  "article0link": "https://www.freecodecamp.org/news/10-to-the-power-of-0-the-zero-exponent-rule-and-the-power-of-zero-explained/",
-  "article1title": "Git Reset to Remote",
-  "article1link": "https://www.freecodecamp.org/news/git-reset-to-remote-head-how-to-reset-a-remote-branch-to-origin/",
-  "article2title": "R Value in Statistics",
-  "article2link": "https://www.freecodecamp.org/news/what-is-a-correlation-coefficient-r-value-in-statistics-explains/",
-  "article3title": "What is Economics?",
-  "article3link": "https://www.freecodecamp.org/news/what-is-economics/",
-  "article4title": "Module Exports",
-  "article4link": "https://www.freecodecamp.org/news/node-module-exports-explained-with-javascript-export-function-examples/",
-  "article5title": "Python VS JavaScript",
-  "article5link": "https://www.freecodecamp.org/news/python-vs-javascript-what-are-the-key-differences-between-the-two-popular-programming-languages/",
+  "article0title": "What is JavaScript?",
+  "article0link": "https://www.freecodecamp.org/news/what-is-javascript-javascript-code-explained-in-plain-english/",
+  "article1title": "Linux List Processes",
+  "article1link": "https://www.freecodecamp.org/news/linux-list-processes-how-to-check-running-processes/",
+  "article2title": "Web Page Text Editor",
+  "article2link": "https://www.freecodecamp.org/news/web-page-text-editor-how-to-open-html-code-in-mac-textedit/",
+  "article3title": "What is Open Source?",
+  "article3link": "https://www.freecodecamp.org/news/what-is-open-source-software-explained-in-plain-english/",
+  "article4title": "Sim Swapping Attacks",
+  "article4link": "https://www.freecodecamp.org/news/protect-yourself-against-sim-swapping-attacks/",
+  "article5title": "RNG Meaning in Gaming",
+  "article5link": "https://www.freecodecamp.org/news/rng-meaning-what-does-rng-stand-for-in-gaming/",
   "article6title": "Model View Controller",
-  "article6link": "https://www.freecodecamp.org/news/model-view-architecture/",
-  "article7title": "React Testing Library",
-  "article7link": "https://www.freecodecamp.org/news/react-testing-library-tutorial-javascript-example-code/",
-  "article8title": "ASCII Table Chart",
-  "article8link": "https://www.freecodecamp.org/news/ascii-table-hex-to-ascii-value-character-code-chart-2/",
-  "article9title": "Data Validation",
-  "article9link": "https://www.freecodecamp.org/news/form-validation-with-html5-and-javascript/",
-  "article10title": "Recursion",
-  "article10link": "https://www.freecodecamp.org/news/what-is-recursion-in-javascript/",
-  "article11title": "ISO File",
-  "article11link": "https://www.freecodecamp.org/news/what-is-an-iso-file-explained-in-plain-english/",
-  "article12title": "ADB",
-  "article12link": "https://www.freecodecamp.org/news/adb-android-install-guide-drivers-and-commands/",
-  "article13title": "MBR VS GPT",
-  "article13link": "https://www.freecodecamp.org/news/mbr-vs-gpt-whats-the-difference-between-an-mbr-partition-and-a-gpt-partition-solved/",
-  "article14title": "Debounce",
-  "article14link": "https://www.freecodecamp.org/news/javascript-debounce-example/",
-  "article15title": "Helm Chart",
-  "article15link": "https://www.freecodecamp.org/news/what-is-a-helm-chart-tutorial-for-kubernetes-beginners/",
-  "article16title": "80-20 Rule",
-  "article16link": "https://www.freecodecamp.org/news/the-80-20-rule-pareto-principle-explained-in-plain-english/",
-  "article17title": "OSI Model",
-  "article17link": "https://www.freecodecamp.org/news/osi-model-networking-layers-explained-in-plain-english/",
-  "article18title": "HTML Link Code",
-  "article18link": "https://www.freecodecamp.org/news/html-link-code-how-to-insert-a-link-to-a-website-with-href-3/",
-  "article19title": "SDLC",
-  "article19link": "https://www.freecodecamp.org/news/what-is-sdlc-software-development-life-cycle-phases-methodologies-and-processes-explained/",
-  "article20title": "Inductive VS Deductive",
-  "article20link": "https://www.freecodecamp.org/news/inductive-vs-deductive-reasoning/",
-  "article21title": "JavaScript Empty Array",
-  "article21link": "https://www.freecodecamp.org/news/check-if-javascript-array-is-empty-or-not-with-length/",
-  "article22title": "Best Instagram Post Time",
-  "article22link": "https://www.freecodecamp.org/news/the-best-time-to-post-on-instagram-the-best-days-and-times-to-reach-your-ig-followers/",
-  "article23title": "Garbage Collection in Java",
-  "article23link": "https://www.freecodecamp.org/news/garbage-collection-in-java-what-is-gc-and-how-it-works-in-the-jvm/",
-  "article24title": "Auto-Numbering in Excel",
-  "article24link": "https://www.freecodecamp.org/news/auto-numbering-in-excel/",
-  "article25title": "JavaScript Keycode List",
-  "article25link": "https://www.freecodecamp.org/news/javascript-keycode-list-keypress-event-key-codes/",
-  "article26title": "JavaScript Reverse Array",
-  "article26link": "https://www.freecodecamp.org/news/javascript-array-reverse-tutorial-with-example-js-code/",
-  "article27title": "How to Screenshot on Mac",
-  "article27link": "https://www.freecodecamp.org/news/how-to-take-a-screenshot-on-a-mac-keyboard-shortcut/",
-  "article28title": "How to Reverse Image Search",
-  "article28link": "https://www.freecodecamp.org/news/how-to-reverse-image-search-on-your-phone-or-desktop/",
-  "article29title": "Ternary Operator JavaScript",
-  "article29link": "https://www.freecodecamp.org/news/ternary-operator-javascript-if-statement-tutorial/"
+  "article6link": "https://www.freecodecamp.org/news/the-model-view-controller-pattern-mvc-architecture-and-frameworks-explained/",
+  "article7title": "Front End Development",
+  "article7link": "https://www.freecodecamp.org/news/front-end-developer-what-is-front-end-development-explained-in-plain-english/",
+  "article8title": "Full Stack Developer?",
+  "article8link": "https://www.freecodecamp.org/news/what-is-a-full-stack-developer-back-end-front-end-full-stack-engineer/",
+  "article9title": "JavaScript Switch Case",
+  "article9link": "https://www.freecodecamp.org/news/javascript-switch-case-js-switch-statement-example/",
+  "article10title": "Bash Sleep",
+  "article10link": "https://www.freecodecamp.org/news/bash-sleep-how-to-make-a-shell-script-wait-n-seconds-example-command/",
+  "article11title": "Bash Array",
+  "article11link": "https://www.freecodecamp.org/news/bash-array-how-to-declare-an-array-of-strings-in-a-bash-script/",
+  "article12title": "What is a CV?",
+  "article12link": "https://www.freecodecamp.org/news/what-is-a-cv-and-how-is-it-different-from-a-resume/",
+  "article13title": "Coding Programs",
+  "article13link": "https://www.freecodecamp.org/news/coding-programs-101-ways-to-learn-to-code-for-free/",
+  "article14title": "How to Exit Vim",
+  "article14link": "https://www.freecodecamp.org/news/how-to-exit-vim/",
+  "article15title": "HTML Line Break",
+  "article15link": "https://www.freecodecamp.org/news/html-line-break-how-to-break-a-line-with-the-html-br-tag/",
+  "article16title": "C# String to Int",
+  "article16link": "https://www.freecodecamp.org/news/how-to-convert-a-string-to-an-int-in-c-tutorial-with-example-code/",
+  "article17title": "Logical fallacies",
+  "article17link": "https://www.freecodecamp.org/news/logical-fallacies-definition-fallacy-examples/",
+  "article18title": "JavaScript Online",
+  "article18link": "https://www.freecodecamp.org/news/javascript-online-html-css-js-code-editor-list-browser-ide-tools/",
+  "article19title": "SQL Case Statement",
+  "article19link": "https://www.freecodecamp.org/news/sql-case-statement-tutorial-with-when-then-clause-example-queries/",
+  "article20title": "JavaScript toLowerCase",
+  "article20link": "https://www.freecodecamp.org/news/javascript-tolowercase-how-to-convert-a-string-to-lowercase-and-uppercase-in-js/",
+  "article21title": "Angular NgClass Example",
+  "article21link": "https://www.freecodecamp.org/news/angular-ngclass-example/",
+  "article22title": "SQL Aggregate Functions",
+  "article22link": "https://www.freecodecamp.org/news/sql-aggregate-functions-with-example-data-queries-for-beginners/",
+  "article23title": "What is Web Development?",
+  "article23link": "https://www.freecodecamp.org/news/what-is-web-development-how-to-become-a-web-developer-career-path/",
+  "article24title": "Best Way to Learn Python",
+  "article24link": "https://www.freecodecamp.org/news/the-best-way-to-learn-python-python-programming-tutorial-for-beginners/",
+  "article25title": "Word Count in Google Docs",
+  "article25link": "https://www.freecodecamp.org/news/word-count-in-google-docs-tutorial-counting-words-and-characters-in-a-google-doc-or-word-file/",
+  "article26title": "Node Environment Variables",
+  "article26link": "https://www.freecodecamp.org/news/how-to-use-node-environment-variables-with-a-dotenv-file-for-node-js-and-npm/",
+  "article27title": "Event Viewer in Windows 10",
+  "article27link": "https://www.freecodecamp.org/news/event-viewer-how-to-access-the-windows-10-activity-log/",
+  "article28title": "Combine 1st/Last Name Excel",
+  "article28link": "https://www.freecodecamp.org/news/combine-first-last-names-excel/",
+  "article29title": "JavaScript if-else & if-then",
+  "article29link": "https://www.freecodecamp.org/news/javascript-if-else-and-if-then-js-conditional-statements/"
 }
