--- a/i18n/locales/espanol/translations.json
+++ b/i18n/locales/espanol/translations.json
@@ -2,10 +2,7 @@
   "buttons": {
     "forum": "Foro",
     "donate": "Donar",
-    "load-more-articles": "Carga más Artículos",
-    "author-has-twitter": "Realiza un Tweet de agradecimiento",
-    "author-no-twitter": "haz un tweet",
-    "learn-to-code-cta": "Empieza"
+    "load-more-articles": "Carga más Artículos"
   },
   "search": {
     "label": "Buscar",
@@ -14,37 +11,28 @@
     "see-results": "Ver todos los resultados de {{ searchQuery }}",
     "no-tutorials": "No se encontraron tutoriales"
   },
-  "banner": {
-    "text": "<span>Charla con otros desarrolladores en español</span>"
-  },
+  "banner": "{{ <0> }}Charla con otros desarrolladores en español{{ </0> }}",
   "author": {
-    "page": {
-      "no-posts": "No hay artículos",
-      "one-post": "1 artículo",
-      "multiple-posts": "{{ postCount }} artículos"
-    },
-    "byline": {
-      "read-more": "Leer {{ <0> }}más publicaciones{{ </0> }} de este {{ role }}."
-
-    }
+    "no-posts": "No hay artículos",
+    "one-post": "1 artículo",
+    "multiple-posts": "{{ postCount }} artículos",
+    "read-more": "Leer {{ <0> }}más publicaciones{{ </0> }} de este {{ role }}."
   },
-  "tag-page": {
-    "collection-of-posts": "Una colección de artículos",
+  "tag": {
+    "no-posts": "Una colección de artículos",
     "one-post": "Una colección de 1 artículo",
     "multiple-posts": "Una colección de {{ postCount }} artículos"
   },
-  "404-page": {
+  "404": {
     "page-not-found": "Página no encontrada",
     "go-to-front-page": "Ir a la página de inicio"
   },
   "social-row": {
-    "author-has-twitter": "Si leíste hasta aquí, haz un tweet al autor para mostrarle que te importa su trabajo.",
-    "author-no-twitter": "Si este artículo te fue útil",
-    "default-tweet": "Gracias {{ twitter }} por escribir este útil artículo"
+    "author-has-twitter": "Si leíste hasta aquí, haz un tweet al autor para mostrarle que te importa su trabajo. {{ <0> }}Realiza un Tweet de agradecimiento{{ </0> }}",
+    "author-no-twitter": "Si este artículo te fue útil, {{ <0> }}haz un tweet{{ </0> }}.",
+    "default-tweet": "Gracias {{ twitter }} por escribir este útil artículo."
   },
-  "learn-to-code-cta": {
-    "text": "Aprende a codificar de forma gratuita. El plan de estudios de código abierto de freeCodeCamp ha ayudado a más de 40,000 personas a obtener trabajos como desarrolladores."
-  },
+  "learn-to-code-cta": "Aprende a codificar de forma gratuita. El plan de estudios de código abierto de freeCodeCamp ha ayudado a más de 40,000 personas a obtener trabajos como desarrolladores. {{ <0> }}Empieza{{ </0> }}",
   "localization-meta": {
     "roles": {
       "author": "autor",
@@ -64,7 +52,7 @@
     "tax-exempt-status": "freeCodeCamp es una organización sin fines de lucro exenta de impuestos 501(c)(3) respaldada por donantes (Número de identificación fiscal federal de los Estados Unidos: 82-0779546)",
     "mission-statement": "Nuestra misión: ayudar a las personas a aprender a programar de forma gratuita. Logramos esto mediante la creación de miles de videos, artículos y lecciones de programación interactivas, todos disponibles gratuitamente para el público. También tenemos miles de grupos de estudio de FreeCodeCamp en todo el mundo.",
     "donation-initiatives": "Las donaciones a freeCodeCamp se destinan a nuestras iniciativas educativas y ayudan a pagar los servidores, los servicios y el personal.",
-    "donate-link": "Puedes hacer {{ <0> }}una donación deducible de impuestos aquí{{ </0> }}.",
+    "donate-text": "Puedes hacer {{ <0> }}una donación deducible de impuestos aquí{{ </0> }}.",
     "trending-guides": "Guías de tendencias",
     "our-nonprofit": "Nuestra organización sin fines de lucro",
     "links": {
