--- a/i18n/locales/italian/links.json
+++ b/i18n/locales/italian/links.json
@@ -1,16 +1,13 @@
 {
-  "forum-url": "https://forum.freecodecamp.org/c/italiano/535",
-  "donate-url": "https://www.freecodecamp.org/italian/donate/",
-  "banner-url": "https://chat.freecodecamp.org/",
-  "learn-to-code-cta-url": "https://www.freecodecamp.org/italian/learn/",
-  "about-url": "https://www.freecodecamp.org/news/about/",
-  "shop-url": "https://www.freecodecamp.org/shop/",
-  "support-url": "https://www.freecodecamp.org/news/support/",
-  "sponsors-url": "https://www.freecodecamp.org/news/sponsors/",
-  "honesty-url": "https://www.freecodecamp.org/news/academic-honesty-policy/",
-  "coc-url": "https://www.freecodecamp.org/news/code-of-conduct/",
-  "privacy-url": "https://www.freecodecamp.org/news/privacy-policy/",
-  "tos-url": "https://www.freecodecamp.org/news/terms-of-service/",
-  "copyright-url": "https://www.freecodecamp.org/news/copyright-policy/",
-  "twitter-url": "https://twitter.com/freecodecampit"
+  "forum": "https://forum.freecodecamp.org/c/italiano/535",
+  "donate": "https://www.freecodecamp.org/italian/donate/",
+  "banner": "https://chat.freecodecamp.org/",
+  "learn-to-code-cta": "https://www.freecodecamp.org/italian/learn/",
+  "twitter": "https://twitter.com/freecodecampit",
+  "footer": {
+    "about": "https://www.freecodecamp.org/italian/news/faq/",
+    "support": "https://www.freecodecamp.org/italian/news/domande-frequenti-supporto-tecnico-freecodecamp-faq/",
+    "honesty": "https://www.freecodecamp.org/italian/news/freecodecamps-academic-honesty-policy/",
+    "coc": "https://www.freecodecamp.org/italian/news/codice-di-condotta/"
+  }
 }
