--- a/i18n/locales/portuguese/links.json
+++ b/i18n/locales/portuguese/links.json
@@ -1,16 +1,13 @@
 {
-  "forum-url": "https://forum.freecodecamp.org/c/portugues/534",
-  "donate-url": "https://www.freecodecamp.org/portuguese/donate/",
-  "banner-url": "https://chat.freecodecamp.org/home",
-  "learn-to-code-cta-url": "https://www.freecodecamp.org/portuguese/learn/",
-  "about-url": "https://www.freecodecamp.org/news/about/",
-  "shop-url": "https://www.freecodecamp.org/shop/",
-  "support-url": "https://www.freecodecamp.org/news/support/",
-  "sponsors-url": "https://www.freecodecamp.org/news/sponsors/",
-  "honesty-url": "https://www.freecodecamp.org/news/academic-honesty-policy/",
-  "coc-url": "https://www.freecodecamp.org/news/code-of-conduct/",
-  "privacy-url": "https://www.freecodecamp.org/news/privacy-policy/",
-  "tos-url": "https://www.freecodecamp.org/news/terms-of-service/",
-  "copyright-url": "https://www.freecodecamp.org/news/copyright-policy/",
-  "twitter-url": "https://twitter.com/freecodecampPT"
+  "forum": "https://forum.freecodecamp.org/c/portugues/534",
+  "donate": "https://www.freecodecamp.org/portuguese/donate/",
+  "banner": "https://chat.freecodecamp.org/home",
+  "learn-to-code-cta": "https://www.freecodecamp.org/portuguese/learn/",
+  "twitter": "https://twitter.com/freecodecampPT",
+  "footer": {
+    "about": "https://www.freecodecamp.org/portuguese/news/sobre-o-freecodecamp-perguntas-frequentes/",
+    "support": "https://www.freecodecamp.org/portuguese/news/perguntas-frequentes-sobre-suporte-tecnico-faq-do-freecodecamp/",
+    "honesty": "https://www.freecodecamp.org/portuguese/news/politica-de-honestidade-academica-do-freecodecamp/",
+    "coc": "https://www.freecodecamp.org/portuguese/news/codigo-de-conduta-do-freecodecamp/"
+  }
 }
