--- a/i18n/locales/portuguese/translations.json
+++ b/i18n/locales/portuguese/translations.json
@@ -2,10 +2,7 @@
   "buttons": {
     "forum": "Fórum",
     "donate": "Doar",
-    "load-more-articles": "Carregar mais artigos",
-    "author-has-twitter": "Agradeça no Twitter",
-    "author-no-twitter": "Twitter",
-    "learn-to-code-cta": "Comece agora"
+    "load-more-articles": "Carregar mais artigos"
   },
   "search": {
     "label": "Buscar",
@@ -14,36 +11,28 @@
     "see-results": "Ver todos os resultados para {{ searchQuery }}",
     "no-tutorials": "Não foram encontrados tutoriais"
   },
-  "banner": {
-    "text": "<span>Converse com outros desenvolvedores em português</span>"
-  },
+  "banner": "<span>Converse com outros desenvolvedores em português</span>",
   "author": {
-    "page": {
-      "no-posts": "Não há artigos",
-      "one-post": "1 artigo",
-      "multiple-posts": "{{ postCount }} artigos"
-    },
-    "byline": {
-      "read-more": "Ler {{ <0> }}mais publicações{{ </0> }} deste {{ role }}."
-    }
+    "no-posts": "Não há artigos",
+    "one-post": "1 artigo",
+    "multiple-posts": "{{ postCount }} artigos",
+    "read-more": "Ler {{ <0> }}mais publicações{{ </0> }} deste {{ role }}."
   },
-  "tag-page": {
-    "collection-of-posts": "Uma coleção de artigos",
+  "tag": {
+    "no-posts": "Uma coleção de artigos",
     "one-post": "Uma coleção de 1 artigo",
     "multiple-posts": "Uma coleção de {{ postCount }} artigos"
   },
-  "404-page": {
+  "404": {
     "page-not-found": "Página não encontrada",
     "go-to-front-page": "Ir para a página inicial"
   },
   "social-row": {
-    "author-has-twitter": "Se você leu até aqui, envie uma mensagem no Twitter para o autor para mostrar que você se importa com o trabalho.",
-    "author-no-twitter": "Se este artigo foi útil, compartilhe-o no",
-    "default-tweet": "Obrigado, {{ twitter }}, por ter escrito este artigo. Foi muito útil"
+    "author-has-twitter": "Se você leu até aqui, envie uma mensagem no Twitter para o autor para mostrar que você se importa com o trabalho. {{ <0> }}Agradeça no Twitter{{ </0> }}",
+    "author-no-twitter": "Se este artigo foi útil, compartilhe-o no {{ <0> }}Twitter{{ </0> }}.",
+    "default-tweet": "Obrigado, {{ twitter }}, por ter escrito este artigo. Foi muito útil."
   },
-  "learn-to-code-cta": {
-    "text": "Aprenda a programar gratuitamente. O plano de estudos em código aberto do freeCodeCamp já ajudou mais de 40.000 pessoas a obter empregos como desenvolvedores."
-  },
+  "learn-to-code-cta": "Aprenda a programar gratuitamente. O plano de estudos em código aberto do freeCodeCamp já ajudou mais de 40.000 pessoas a obter empregos como desenvolvedores. {{ <0> }}Comece agora{{ </0> }}",
   "localization-meta": {
     "roles": {
       "author": "autor",
@@ -63,7 +52,7 @@
     "tax-exempt-status": "O freeCodeCamp é uma organização sem fins lucrativos 501(c)(3), isenta de impostos e apoiada por doações (Número de identificação fiscal federal dos Estados Unidos: 82-0779546).",
     "mission-statement": "Nossa missão: ajudar as pessoas a aprender a programar de forma gratuita. Conseguimos isto criando milhares de vídeos, artigos e lições de programação interativas, todas disponíveis gratuitamente para o público. Também temos milhares de grupos de estudo do freeCodeCamp em todo o mundo.",
     "donation-initiatives": "As doações feitas ao freeCodeCamp vão para nossas iniciativas educacionais e ajudam a pagar servidores, serviços e a equipe.",
-    "donate-link": "Você pode fazer {{ <0> }}uma doação dedutível de impostos aqui{{ </0> }}.",
+    "donate-text": "Você pode fazer {{ <0> }}uma doação dedutível de impostos aqui{{ </0> }}.",
     "trending-guides": "Guias de tendências",
     "our-nonprofit": "Nossa organização sem fins lucrativos",
     "links": {
