--- a/i18n/locales/italian/links.json
+++ b/i18n/locales/italian/links.json
@@ -1,7 +1,7 @@
 {
   "forum": "https://forum.freecodecamp.org/c/italiano/535",
   "donate": "https://www.freecodecamp.org/italian/donate/",
-  "banner": "https://chat.freecodecamp.org/",
+  "banner": "https://forum.freecodecamp.org/t/contribuire-a-tradurre-freecodecamp-in-italiano/479009/",
   "learn-to-code-cta": "https://www.freecodecamp.org/italian/learn/",
   "twitter": "https://twitter.com/freecodecampit",
   "footer": {
