--- a/i18n/locales/italian/translations.json
+++ b/i18n/locales/italian/translations.json
@@ -39,12 +39,13 @@
       "translator": "traduttore"
     },
     "card-name": "{{ role }}: {{ name }}",
-    "languages": {
-      "en": "Inglese",
-      "es": "Spagnolo",
-      "zh": "Cinese",
-      "pt-br": "Portoghese",
-      "it": "Italiano"
+    "locales": {
+      "english": "inglese",
+      "espanol": "spagnolo",
+      "chinese": "cinese",
+      "portuguese": "portoghese",
+      "italian": "italiano",
+      "japanese": "giapponese"
     }
   },
   "embed-title": "Contenuto incorporato",
