--- a/i18n/locales/chinese/translations.json
+++ b/i18n/locales/chinese/translations.json
@@ -38,12 +38,13 @@
       "translator": "译者"
     },
     "card-name": "{{ role }}: {{ name }}",
-    "languages": {
-      "en": "英语",
-      "es": "西班牙语",
-      "zh": "中文",
-      "pt-br": "葡萄牙语",
-      "it": "意大利语"
+    "locales": {
+      "english": "英语",
+      "espanol": "西班牙语",
+      "chinese": "中文",
+      "portuguese": "葡萄牙语",
+      "italian": "意大利语",
+      "japanese": "日语"
     }
   },
   "embed-title": "嵌入内容",
