--- a/i18n/locales/portuguese/translations.json
+++ b/i18n/locales/portuguese/translations.json
@@ -39,12 +39,13 @@
       "translator": "tradutor"
     },
     "card-name": "{{ role }}: {{ name }}",
-    "languages": {
-      "en": "Inglês",
-      "es": "Espanhol",
-      "zh": "Chinês",
-      "pt-br": "Português",
-      "it": "Italiano"
+    "locales": {
+      "english": "inglês",
+      "espanol": "espanhol",
+      "chinese": "chinês",
+      "portuguese": "português",
+      "italian": "italiano",
+      "japanese": "japonês"
     }
   },
   "embed-title": "Conteúdo incorporado",
