--- a/i18n/locales/english/translations.json
+++ b/i18n/locales/english/translations.json
@@ -39,6 +39,10 @@
       "translator": "translator"
     },
     "card-name": "{{ role }}: {{ name }}",
+    "info": {
+      "original-article": "{{ <0> }}Original article:{{ </0> }} {{ title }} by {{ author }}",
+      "translated-by": "{{ <0> }}Translated by:{{ </0> }} {{ translator }}"
+    },
     "locales": {
       "english": "English",
       "espanol": "Spanish",
