fix: update i18n schema, make author/translator bylines more flexible

--- a/i18n/locales/chinese/translations.json
+++ b/i18n/locales/chinese/translations.json
@@ -37,7 +37,14 @@
       "author": "作者",
       "translator": "译者"
     },
-    "card-name": "{{ role }}: {{ name }}",
+    "bylines": {
+      "author": "{{ role }}： {{ name }}",
+      "translator": "{{ role }}： {{ name }}"
+    },
+    "info": {
+      "original-article": "{{ <0> }}原文：{{ </0> }} {{ title }}，作者：{{ author }}",
+      "translated-by": "{{ <0> }}译者：{{ </0> }} {{ translator }}"
+    },
     "locales": {
       "english": "英语",
       "espanol": "西班牙语",
