--- a/i18n/locales/japanese/translations.json
+++ b/i18n/locales/japanese/translations.json
@@ -38,7 +38,14 @@
       "author": "著者",
       "translator": "翻訳"
     },
-    "card-name": "{{ role }}: {{ name }}",
+    "bylines": {
+      "author": "{{ role }}: {{ name }} ({{ locale }})",
+      "translator": "{{ role }}: {{ name }}"
+    },
+    "info": {
+      "original-article": "{{ <0> }}原文:{{ </0> }} {{ author }}による{{ title }}",
+      "translated-by": "{{ <0> }}翻訳:{{ </0> }} {{ translator }}"
+    },
     "locales": {
       "english": "英語",
       "espanol": "スペイン語",
