fix(i18n): improve Japanese translations

--- a/i18n/locales/japanese/meta-tags.json
+++ b/i18n/locales/japanese/meta-tags.json
@@ -1,5 +1,5 @@
 {
-  "title": "freeCodeCampプログラミングチュートリアル: Python, JavaScript, Gitなど",
+  "title": "freeCodeCamp プログラミングチュートリアル: Python, JavaScript, Git 他",
   "keywords": "freeCodeCamp, フリーコードキャンプ, プログラミング, フロントエンド, プログラマー, 記事, 正規表現, Python, JavaScript, AWS, JSON, HTML, CSS, Bootstrap, React, Vue, Webpack",
-  "description": "専門家によって書かれた何千ものプログラミングチュートリアルを閲覧してください。 Web開発、データサイエンス、DevOps、セキュリティを学び、開発者のキャリアに関するアドバイスを得る。"
+  "description": "エキスパートによって書かれた多数のプログラミングチュートリアルを読むことができます。ウェブ開発、データサイエンス、DevOps、セキュリティなどについて学び、開発者のキャリアに関するアドバイスを得ましょう。"
 }
