fix(i18n): change the word for translator in Japanese

--- a/i18n/locales/japanese/translations.json
+++ b/i18n/locales/japanese/translations.json
@@ -36,7 +36,7 @@
   "localization-meta": {
     "roles": {
       "author": "著者",
-      "translator": "翻訳者"
+      "translator": "翻訳"
     },
     "card-name": "{{ role }}: {{ name }}",
     "languages": {
