fix(i18n): improve learn-to-code-cta translation

--- a/i18n/locales/japanese/translations.json
+++ b/i18n/locales/japanese/translations.json
@@ -32,7 +32,7 @@
     "author-no-twitter": "この記事が参考になりましたらぜひシェアしてください。{{ <0> }}ツイート{{ </0> }}",
     "default-tweet": "この記事が参考になりました。{{ twitter }} さんありがとうございます。"
   },
-  "learn-to-code-cta": "無料でコーディングを学びましょう。freeCodeCamp のオープンソースカリキュラムの力を借りて、40,000 人以上が開発者としての仕事を得ています。{{ <0> }}始める{{ </0> }}",
+  "learn-to-code-cta": "コーディングを無料で学びましょう。freeCodeCamp のオープンソースカリキュラムによって、40,000 人以上の人々が開発者としての仕事を得ています。{{ <0> }}始める{{ </0> }}",
   "localization-meta": {
     "roles": {
       "author": "著者",
