--- a/i18n/locales/japanese/translations.json
+++ b/i18n/locales/japanese/translations.json
@@ -29,14 +29,14 @@
   },
   "social-row": {
     "author-has-twitter": "お読みいただきありがとうございます。ぜひ著者にツイートしてお知らせください。{{ <0> }}著者宛てにツイート{{ </0> }}",
-    "author-no-twitter": "この記事が参考になりましたらぜひシェアしてください。{{ <0> }}ツイート{{ </0> }}.",
+    "author-no-twitter": "この記事が参考になりましたらぜひシェアしてください。{{ <0> }}ツイート{{ </0> }}",
     "default-tweet": "この記事が参考になりました。{{ twitter }} さんありがとうございます。"
   },
-  "learn-to-code-cta": "無料でコーディングを学びましょう。freeCodeCamp のオープンソースカリキュラムの力を借りて 40,000 人以上の人々が開発者としての仕事を得ています。{{ <0> }}始める{{ </0> }}",
+  "learn-to-code-cta": "コーディングを無料で学びましょう。freeCodeCamp のオープンソースカリキュラムによって、40,000 人以上の人々が開発者としての仕事を得ています。{{ <0> }}始める{{ </0> }}",
   "localization-meta": {
     "roles": {
       "author": "著者",
-      "translator": "翻訳者"
+      "translator": "翻訳"
     },
     "card-name": "{{ role }}: {{ name }}",
     "languages": {
@@ -52,7 +52,7 @@
     "tax-exempt-status": "freeCodeCamp は皆様のご寄付により支えられている非課税の 501(c)(3) 非営利団体です。(United States Federal Tax Identification Number: 82-0779546)",
     "mission-statement": "私たちのミッション: 人々が無料でコーディングを学べるよう支援することです。その実現のため、何千もの動画、記事、インタラクティブなコーディングレッスンを作成し、すべて無料で公開しています。さらに、数千の freeCodeCamp スタディグループが世界中に存在します。",
     "donation-initiatives": "freeCodeCamp へのご寄付は教育活動のために用いられ、サーバー、サービス、スタッフなどの費用に充てられます。",
-    "donate-text": "{{ <0> }}こちらからご寄付を賜りますよう{{ </0> }}お願い申し上げます。(場合により税控除可能)",
+    "donate-text": "{{ <0> }}こちらからご寄付をお願いいたします{{ </0> }}。(場合により税控除可能)",
     "trending-guides": "人気の記事",
     "our-nonprofit": "組織情報",
     "links": {
