--- a/i18n/locales/portuguese/translations.json
+++ b/i18n/locales/portuguese/translations.json
@@ -39,12 +39,12 @@
       "translator": "tradutor"
     },
     "bylines": {
-      "author": "{{ role }}: {{ name }} ({{ locale }})",
+      "author": "{{ role }}: {{ name }} (em {{ locale }})",
       "translator": "{{ role }}: {{ name }}"
     },
     "info": {
-      "original-article": "{{ <0> }}Artigo original:{{ </0> }} {{ title }} por {{ author }}",
-      "translated-by": "{{ <0> }}Traduzido por:{{ </0> }} {{ translator }}"
+      "original-article": "{{ <0> }}Artigo original:{{ </0> }} {{ title }}, escrito por {{ author }}",
+      "translated-by": "{{ <0> }}Traduzido e adaptado por:{{ </0> }} {{ translator }}"
     },
     "locales": {
       "english": "inglês",
