--- a/i18n/locales/arabic/links.json
+++ b/i18n/locales/arabic/links.json
@@ -3,7 +3,7 @@
   "donate": "https://www.freecodecamp.org/donate/",
   "banner": "https://www.freecodecamp.org/",
   "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
-  "twitter": "https://twitter.com/freecodecamp",
+  "twitter": "https://twitter.com/freeCodeCampAR",
   "footer": {
     "about": "https://www.freecodecamp.org/news/about/",
     "support": "https://www.freecodecamp.org/news/support/",
